...
    },
    "action.open_passwords": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Passwörter öffnen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Open Passwords"
          }
        }
      }
    },
    "action.open_provider_sync": {
      "localizations": {
...
    },
    "menu.add_booking": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Neue Buchung…"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Booking…"
...
